[package]
name = "overseer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = "1.12.0"
const_format = "0.2.32"
futures = "0.3.29"
iced = { version = "0.10.0", features = ["advanced"] }
oneshot = "0.1.6"
thiserror = "1.0.50"
